--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <li><a class="hvr-clr" href="#">Owners</a></li>
                 <li><a class="hvr-clr" href="#">VR Showrooms</a></li>
             </ul>
-            <img class="logo" src="/newKia/images/previewbge.png">
-            <img id="logg" class="logo1" src="/newKia/images/kia.png">
+            <img class="logo" src="images/previewbge.png">
+            <img id="logg" class="logo1" src="images/kia.png">
             <ul class="navcnt1">
                 <li><a class="hvr-clr" href="#">Kia Connect</a></li>
                 <li><a class="hvr-clr" href="#">Discover Kia</a></li>
@@ -124,7 +124,7 @@
     </div>
     <div class="footer">
         <div class="container1">
-            <img class="kiawt" src="/bootstrap/images/previewbg.png">
+            <img class="kiawt" src="images/previewbg.png">
             <div class="row1">
                 <div class="footer-col"
                     style="padding-top: 35px;font-weight: bold;font-size: large; line-height: 35px;">
