--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </button>
         </div>
         <div class="carousal1">
-            <img style="width: 100%; height: 100%;" src="/newKia/images/kia-bg.jpg">
+            <img style="width: 100%; height: 100%;" src="images/kia-bg.jpg">
         </div>
     </div>
     <div class="midbox">
